tests/errors/sem.no-match.ptr.or
main :: () -> void {
    T :: (a: &!u) {
        return;
    };

    T(10);
};
